<resources>
    <string name="app_name">TripForum</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_my_posts">My Posts</string>
    <string name="menu_add_trip">Add Trip</string>
    <string name="open">TripForum</string>
    <string name="close">TripForum</string>
    <string name="activity_add_new_trip_titel">Add New Trip</string>
    <string name="activity_add_new_trip_country">Country</string>
    <string name="activity_add_new_trip_cities">Cities</string>
    <string name="activity_add_new_trip_duration">Duration</string>
    <string name="activity_add_new_trip_categories">Categories:</string>
    <string name="activity_add_new_trip_your_name">*Your name</string>
    <string name="activity_add_new_trip_your_email">*Your email</string>
    <string name="activity_add_new_trip_add_photo">Add Photo</string>
    <string name="activity_add_new_trip_cancel">Cancel</string>
    <string name="activity_add_new_trip_post">Post</string>
    <string name="activity_main_most_recent">Most Recent</string>
    <string name="activity_main_your_search_results">Your search results</string>
    <string name="activity_main_search_your_next_trip">Search your next trip</string>
    <string name="activity_main_clear">Clear Search</string>
    <string name="activity_main_family">Family</string>
    <string name="activity_main_young">Young</string>
    <string name="activity_main_adults">Adults</string>
    <string name="activity_main_any_age">Any age</string>
    <string name="activity_main_vacation">Vacation</string>
    <string name="activity_main_romantic">Romantic</string>
    <string name="activity_main_extreme">Extreme</string>
    <string name="activity_main_cultural">Cultural</string>
    <string name="activity_main_city">City</string>
    <string name="activity_favorites_posts_favorites">Favorites</string>
    <string name="activity_my_posts_my_posts">My Posts</string>
</resources>
