<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b8_5"
    android:padding="30dp"
    tools:context=".AddNewTrip"
    tools:layout_editor_absoluteX="20dp"
    tools:layout_editor_absoluteY="72dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/activity_add_new_trip_titel"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_country"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_cities"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCity1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextCity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextCity3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_duration"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="5dp"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_categories"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerPopulationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerTripType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_your_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="5dp"
                android:textSize="22sp"
                tools:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_new_trip_your_email"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="5dp"
                android:textSize="22sp"
                tools:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="Your Trip:"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTripDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/border_text_multi_line"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingLeft="65dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/buttonAddPhoto"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/activity_add_new_trip_add_photo"
                android:textAllCaps="false"
                android:textStyle="bold"
                />

            <ProgressBar
                android:id="@+id/loadingPanel"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:indeterminate="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/activity_add_new_trip_cancel"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/activity_add_new_trip_post"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
